After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 72521 - File saved in Excel95 format crashes the Excel Viewer plugin running under the Crossover Wine software.
File saved in Excel95 format crashes the Excel Viewer plugin running under th...
Status: VERIFIED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-02-25 14:20 UTC by Miles Lane
Modified: 2009-08-15 18:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Original Excel file (34.00 KB, application/octet-stream)
2002-02-25 14:21 UTC, Miles Lane
Details
Gnumeric Excel95 file format (39.00 KB, application/octet-stream)
2002-02-25 14:22 UTC, Miles Lane
Details

Description Miles Lane 2002-02-25 14:20:40 UTC
Repro:

Read in an Excel file.
Save the file in Excel95 format
With the Crossover plugin installed, launch the Excel Viewer plugin.
Load the original Excel file (verify the viewer is working)
Attempt to load the Gnumeric-saved file.

Result:

The viewer crashes.

I am attaching both my original excel file and the one that
Gnumeric saved.
Comment 1 Miles Lane 2002-02-25 14:21:59 UTC
Created attachment 6857 [details]
Original Excel file
Comment 2 Miles Lane 2002-02-25 14:22:55 UTC
Created attachment 6858 [details]
Gnumeric Excel95 file format
Comment 3 Jody Goldberg 2002-02-28 07:05:16 UTC
Fixed in 1.0, and 1.1
Excellent bug.  Finding this forced me to fix 4 other bugs with names and XL
export before finally arriving at this.  The problem stemed from mishandling
the intersheet reference in the named-expression.